[package]
name = "open-meteo-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.41.1", features = ["full"] }
reqwest = { version = "0.12.9", features = ["json"]}
serde = { version = "1.0.215", features = ["derive"] }
warp = "0.3.7"
dotenv = "0.15.0"
chrono = "0.4"
openssl = { version = "0.10", features = ["vendored"] }
toml = "0.8.19"